# DeepDendro

./: CMakeLists.txt  main.cpp  readme.md
CIFAR10/: downoad_cifar10.sh
Worker/: FirstWorker.cpp  FirstWorker.h  LastWorker.cpp  LastWorker.h  Worker.cpp  Worker.h
activation_funcs/: actiovation_funcs.h  activationDerivative.cpp  activationDerivative.h  activationFuncs.cpp  activationFuncs.h  activation_funcs.cpp
evaluation_metrics/: accuracy.cpp  accuracy.h
layers/: Layers.h  common_funcs.h
layers/conv_layer/: ConvLayer.cpp  ConvLayer.h  ConvLayerBase.h  Convolutions.cpp  Convolutions.h  Filter.cpp  Filter.h  Pooling.cpp  Pooling.h  activ_func_conv.h  common_funcs.h
layers/flattening_layer/: FlatteningLayer.h
layers/flow_layer/: FlowLayer.cpp  FlowLayer.h  FlowOutputLayer.cpp  FlowOutputLayer.h
layers/hidden_layer/: HiddenLayer.cpp  HiddenLayer.h
layers/input_layer/: InputLayer.cpp  InputLayer.h
layers/parent_layer/: Layer.cpp  Layer.h
layers/specific_layers/: ConcatenatedLayer.cpp  ConcatenatedLayer.h  InputLayer.cpp  InputLayer.h  OutputLayer.cpp  OutputLayer.h
logging/: Logger.cpp  Logger.h  indicators.h  logging.h
loss_functions/: basic_loss_func.cpp  basic_loss_func.h  lossFunc.cpp  lossFunc.h
matrices/: Matrix.cpp  Matrix.h
model/: Model.cpp  Model.h
model/to_predict/: predict.cpp  predict.h
model_management/recreate_model/: recreate_model.cpp  recreate_model.h
model_management/save_model_state/: save_model.cpp  save_model.h
model_management/to_train/: train.cpp  train.h
parallelism/PipeDream/: PipelineModel.cpp  PipelineModel.h
parallelism/PipeDream/SourceNode/: MicrobatchSourceBody.cpp  MicrobatchSourceBody.h
parallelism/inter_model/: inter_model.cpp  inter_model.h  ts_queue.h
regularization/data_normalization/: CIFAR10_Reader.cpp  CIFAR10_Reader.h  DataSets.h  MNISTProcess.cpp  MNISTProcess.h  dataProcessing.cpp  dataProcessing.h  data_norm.cpp  data_norm.h
regularization/dropout/: dropout.cpp  dropout.h
